--- a/FRBB.uvprojx
+++ b/FRBB.uvprojx
@@ -408,6 +408,11 @@
               <FileType>1</FileType>
               <FilePath>.\SYSTEM\delay\delay.c</FilePath>
             </File>
+            <File>
+              <FileName>delay.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\SYSTEM\delay\delay.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -417,6 +422,11 @@
               <FileName>usart.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\SYSTEM\usart\usart.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\SYSTEM\usart\usart.h</FilePath>
             </File>
           </Files>
         </Group>
